--- a/source/css/_custom/_custom.scss
+++ b/source/css/_custom/_custom.scss
@@ -2,3 +2,18 @@
 // Custom style
 // ==============================
 // You can override the variables in _variables.scss to customize the style
+
+// 视频嵌入宽度自适应
+.video-container {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 56.25%;
+}
+.video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
