--- a/source/css/_custom/_custom.scss
+++ b/source/css/_custom/_custom.scss
@@ -2,3 +2,12 @@
 // Custom style
 // ==============================
 // You can override the variables in _variables.scss to customize the style
+
+.video-container img {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+  cursor: pointer;
+}
