--- a/source/css/_custom/_custom.scss
+++ b/source/css/_custom/_custom.scss
@@ -11,3 +11,11 @@
   height: 100%;
   cursor: pointer;
 }
+
+.video-container video {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
