--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -51,7 +51,7 @@
   </div>
   <%- partial('_script/comments.ejs') %>
   <%- partial('_script/libs.ejs') %>
-  <%- partial('_script/costom.ejs') %>
+  <%- partial('_script/custom.ejs') %>
   <%- partial('_script/theme.ejs') %>
 </body>
 
